--- a/resources/views/wc/src/components/mark-editor/mark-editor.css
+++ b/resources/views/wc/src/components/mark-editor/mark-editor.css
@@ -1,3 +1,36 @@
 :host {
   display: block;
 }
+
+fieldset {
+  border: none;
+  padding: none;
+}
+
+p {
+  margin: 0;
+}
+
+button {
+  padding-inline: 16px;
+  padding-block: 8px;
+  border-radius: 6px;
+  cursor: pointer;
+  border: none;
+  outline: 1px solid #d0d7de;
+  background-color: transparent;
+}
+.load-photo {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.content {
+  outline: 1px solid #d0d7de;
+  border-radius: 6px;
+  border-top-left-radius: 0;
+  padding: 24px;
+}
+button:focus, .content:focus  {
+  outline: 1px solid rgb(45,164,78);
+}
