--- a/resources/views/wc/src/index.html
+++ b/resources/views/wc/src/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0" />
     <title>Stencil Component Starter</title>
 
-    <script type="module" src="/build/wc.esm.js"></script>
-    <script nomodule src="/build/wc.js"></script>
+    <script type="module" src="/build/wc-ephir.esm.js"></script>
+    <script nomodule src="/build/wc-ephir.js"></script>
   </head>
   <body>
-    <mark-editor first="Stencil" last="'Don't call me a framework' JS"></mark-editor>
+    <mark-editor></mark-editor>
   </body>
 </html>
