--- a/public/views/index.html
+++ b/public/views/index.html
@@ -10,7 +10,7 @@
   <!-- https://esm.run/ lit -->
    <style>
     * {
-      font-family: 'SF Mono Regular';
+      font-family: 'Sf Pro Regular';
     }
     html, body, div, span, applet, object, iframe,
     h1, h2, h3, h4, h5, h6, p, blockquote, pre,
