--- a/public/styles/inputs.css
+++ b/public/styles/inputs.css
@@ -5,6 +5,7 @@
   border-radius: 6px;
   padding: 0px 8px;
   height: 32px;
+  letter-spacing: 1px;
   box-shadow: inset 0 1px 0px 0 #1f23284f;
 }
 
@@ -12,6 +13,7 @@
   color: #636C76;
   font-size: 14px;
   font-weight: 400;
+  letter-spacing: 1px;
   line-height: 20px;
 }
 
