--- a/public/views/layouts/login.html
+++ b/public/views/layouts/login.html
@@ -4,10 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="../styles/inputs.css">
+  <link rel="stylesheet" href="../styles/input.css">
+  <link rel="stylesheet" href="../styles/button.css">
+  <link rel="stylesheet" href="../styles/checkbox.css">
   <link rel="stylesheet" href="../styles/label.css">
   <link rel="stylesheet" href="../fonts/style.css">
-  <!-- <script>
+    <!-- <script>
     window.__unocss = {
       rules: [
       ],
