--- a/public/views/layouts/login.html
+++ b/public/views/layouts/login.html
@@ -68,6 +68,12 @@
    </style>
 </head>
 <body>
-  {{{ body }}}
+  <div class="h-dvh flex items-center justify-center">
+    <div class="flex flex-col">
+      <span class="text-3xl w-full text-center inline-block font-medium mb-6">ingbook</span>
+      {{{ body }}}
+    </div>
+  </div>
+  
 </body>
 </html>
