--- a/public/styles/button.css
+++ b/public/styles/button.css
@@ -7,6 +7,22 @@
   box-shadow: 0 1px 0 0 #1f23284f;
   background: #f6f8fa;
   cursor: pointer;
+  font-size: 14px;
+  color: #1f2328;
+}
+a.kit-button {
+  text-decoration: none;
+  text-align: center;
+}
+
+.kit-button.secondary {
+  color: #fff;
+  background-color: #0969da;
+}
+
+.kit-button.secondary:hover {
+  background-color: #0969da;
+  border-color: #0969da;
 }
 
 .kit-button:hover {
