feat: work with db

--- a/public/views/register.html
+++ b/public/views/register.html
@@ -1,13 +1,13 @@
 <form class="px-2 space-y-4 w-320px">
   <div class="flex flex-col gap-y-2">
     <label class="kit-label">Email</label>
-    <input type="text" class="kit-input">
+    <input type="text" name="login" placeholder="Введите логин" class="kit-input">
   
     <label class="kit-label">Пароль</label>
-    <input type="password" class="kit-input">
+    <input type="password" name="password" placeholder="Введите пароль" class="kit-input">
   
     <label class="kit-label">Повторите пароль</label>
-    <input type="password" class="kit-input">
+    <input type="password" name="repeadPassword" placeholder="Введите повторите" class="kit-input">
   </div>
 
   <div class="mt-8 w-full">
