--- a/public/views/register.html
+++ b/public/views/register.html
@@ -1,13 +1,23 @@
-<form class="px-2 space-y-4 w-320px">
+<form class="px-2 space-y-4 w-320px" hx-post="/signup">
   <div class="flex flex-col gap-y-2">
-    <label class="kit-label">Email</label>
-    <input type="text" name="login" placeholder="Введите логин" class="kit-input">
+    <label for="name" class="kit-label">Имя</label>
+    <input
+      id="name"
+      type="text"
+      name="name"
+      placeholder="Введите ваше имя"
+      class="kit-input"
+      required
+    >
+
+    <label for="login" class="kit-label">Email</label>
+    <input id="login" type="text" name="login" placeholder="Введите логин" class="kit-input" required>
   
-    <label class="kit-label">Пароль</label>
-    <input type="password" name="password" placeholder="Введите пароль" class="kit-input">
+    <label for="password" class="kit-label">Пароль</label>
+    <input id="password" type="password" name="password" placeholder="Введите пароль" class="kit-input" required>
   
-    <label class="kit-label">Повторите пароль</label>
-    <input type="password" name="repeadPassword" placeholder="Введите повторите" class="kit-input">
+    <label for="repeadPassword" class="kit-label">Повторите пароль</label>
+    <input id="repeadPassword" type="password" name="repeadPassword" placeholder="Введите повторите" class="kit-input" required>
   </div>
 
   <div class="mt-8 w-full">
