--- a/public/views/register.html
+++ b/public/views/register.html
@@ -10,8 +10,8 @@
       required
     >
 
-    <label for="login" class="kit-label">Email</label>
-    <input id="login" type="text" name="login" placeholder="Введите логин" class="kit-input" required>
+    <label for="email" class="kit-label">Email</label>
+    <input id="email" type="text" name="email" placeholder="Введите логин" class="kit-input" required>
   
     <label for="password" class="kit-label">Пароль</label>
     <input id="password" type="password" name="password" placeholder="Введите пароль" class="kit-input" required>
