--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,7 +1,7 @@
 <form class="px-2 space-y-4 w-320px" hx-post="/api/login">
   <div class="flex flex-col gap-y-2">
-    <label for="login" class="kit-label">Логин</label>
-    <input id="login" name="login" class="kit-input" placeholder="Введите логин" />
+    <label for="email" class="kit-label">Логин</label>
+    <input id="email" name="email" class="kit-input" placeholder="Введите логин" />
   </div>
 
   <div class="flex flex-col gap-y-2">
@@ -11,8 +11,8 @@
 
   <div class="mt-8 w-full">
     <div class="flex items-center gap-x-2">
-      <input id="remember-me" name="rememberMe" type="checkbox" class="kit-checkbox">
-      <label for="remember-me" class="kit-label">Запомнить меня</label>
+      <input id="rememberMe" name="rememberMe" type="checkbox" class="kit-checkbox">
+      <label for="rememberMe" class="kit-label">Запомнить меня</label>
     </div>
     <div class="flex flex-col gap-y-2 mt-4">
       <button class="w-full kit-button" type="submit">Войти</button>
