--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,4 +1,4 @@
-<form class="px-2 space-y-4 w-320px" hx-post="/api/login">
+<form class="px-2 space-y-4 w-320px" hx-post="/signin">
   <div class="flex flex-col gap-y-2">
     <label for="email" class="kit-label">Логин</label>
     <input id="email" name="email" class="kit-input" placeholder="Введите логин" />
@@ -16,7 +16,7 @@
     </div>
     <div class="flex flex-col gap-y-2 mt-4">
       <button class="w-full kit-button" type="submit">Войти</button>
-      <a href="/register" class="h-32px inline-flex items-center justify-center secondary kit-button" type="submit">Зарегестрироваться</a>
+      <a href="/signup" class="h-32px inline-flex items-center justify-center secondary kit-button" type="submit">Зарегестрироваться</a>
     </div>
   </div>
 </form>
