--- a/public/views/register.html
+++ b/public/views/register.html
@@ -1,4 +1,4 @@
-<form class="px-2 space-y-4 w-320px" hx-post="/signup">
+<form class="px-2 space-y-4 w-320px" hx-swap="outerHTML" id="form" hx-post="/signup">
   <div class="flex flex-col gap-y-2">
     <label for="name" class="kit-label">Имя</label>
     <input
@@ -23,6 +23,9 @@
   <div class="mt-8 w-full">
     <div class="flex flex-col gap-y-2 mt-4">
       <button class="w-full kit-button" type="submit">Зарегестрироваться</button>
+      {{#if noMatchPassowrd}}
+        <span style="color: red;">Пароли не совпадают</span>
+      {{/if}}
       <a href="/login" class="h-32px inline-flex items-center justify-center secondary kit-button" type="submit">Войти</a>
     </div>
   </div>
