--- a/public/views/register.html
+++ b/public/views/register.html
@@ -22,11 +22,17 @@
 
   <div class="mt-8 w-full">
     <div class="flex flex-col gap-y-2 mt-4">
-      <button class="w-full kit-button" type="submit">Зарегестрироваться</button>
-      {{#if noMatchPassowrd}}
-        <span style="color: red;">Пароли не совпадают</span>
+      <button
+        class="w-full kit-button"
+        type="submit"
+        _="on click toggle @disabled until htmx:afterOnLoad"
+      >Зарегестрироваться</button>
+      {{#if errors}}
+        {{#each errors}}
+        <span style="color: red;">{{this}}</span>
+        {{/each}}
       {{/if}}
-      <a href="/login" class="h-32px inline-flex items-center justify-center secondary kit-button" type="submit">Войти</a>
+      <a href="/signin" class="h-32px inline-flex items-center justify-center secondary kit-button" type="submit">Войти</a>
     </div>
   </div>
 </form>
