--- a/packages/server/public/views/layouts/main.html
+++ b/packages/server/public/views/layouts/main.html
@@ -69,6 +69,10 @@
   <script src="https://unpkg.com/hyperscript.org@0.9.13"></script>
   <script src="https://cdn.jsdelivr.net/npm/@floating-ui/core@1.6.8"></script>
   <script src="https://cdn.jsdelivr.net/npm/@floating-ui/dom@1.6.11"></script>
+  
+  <script type="module">
+    import('http://localhost:3000/@ephir/wc').then(console.info)
+  </script>
 </head>
 <body>
   <header class="flex items-center justify-between px-4 py-2 h-16 top-0 sticky shadow">
