--- a/packages/server/public/views/layouts/main.html
+++ b/packages/server/public/views/layouts/main.html
@@ -111,7 +111,11 @@
       </button>
       </wc-selectmenu-trigger>
     <wc-selectmenu-sheet>
-      <div>test me 2</div>
+      <div class="flex flex-col">
+        <button class="kit-button">test 1</button>
+        <button class="kit-button">test 2</button>
+        <button class="kit-button">test 3</button>
+      </div>
     </wc-selectmenu-sheet>
     </wc-selectmenu>
 
