--- a/packages/server/public/views/layouts/main.html
+++ b/packages/server/public/views/layouts/main.html
@@ -81,10 +81,11 @@
   </script>
   <script type="module">
     import { defineCustomElement } from 'vue'
-    import { WcSelectmenu, WcSelectmenuTrigger, WcSelectmenuSheet } from '../../wc/main.js'
+    import { WcSelectmenu, WcSelectmenuTrigger, WcSelectmenuSheet, WcSelectmenuIndicator } from '../../wc/main.js'
     customElements.define('wc-selectmenu', defineCustomElement(WcSelectmenu))
     customElements.define('wc-selectmenu-trigger', defineCustomElement(WcSelectmenuTrigger))
     customElements.define('wc-selectmenu-sheet', defineCustomElement(WcSelectmenuSheet))
+    customElements.define('wc-selectmenu-indicator', defineCustomElement(WcSelectmenuIndicator))
   </script>
 </head>
 <body>
@@ -95,7 +96,6 @@
       <wc-selectmenu-trigger>
         <button
         class="kit-button flex items-center gap-x-2"
-        _="on click toggle .rotate-180 on #arrow-header-button end"
       >
         <img
           class="size-6 rounded-full bg-gray-500"
@@ -105,12 +105,10 @@
             src="https://robohash.org/{{user.id}}"
           {{/if}}
         >
-        <svg id="arrow-header-button" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-4">
-          <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
-        </svg>
+        <wc-selectmenu-indicator></wc-selectmenu-indicator>
       </button>
       </wc-selectmenu-trigger>
-    <wc-selectmenu-sheet>
+    <wc-selectmenu-sheet placements="bottom,top">
       <div class="flex flex-col">
         <button class="kit-button">test 1</button>
         <button class="kit-button">test 2</button>
