--- a/packages/server/public/views/login.html
+++ b/packages/server/public/views/login.html
@@ -1,12 +1,12 @@
-<form class="px-2 space-y-4 w-320px" hx-swap="outerHTML" hx-post="/signin">
+<form class="px-2 space-y-4 w-320px" hx-swap="outerHTML" name="loginForm" hx-post="/signin">
   <div class="flex flex-col gap-y-2">
     <label for="email" class="kit-label">Логин</label>
-    <input id="email" name="email" class="kit-input" placeholder="Введите логин" required>
+    <wc-input id="email" name="email" placeholder="Введите логин" required>
   </div>
 
   <div class="flex flex-col gap-y-2">
     <label for="password" class="kit-label">Пароль</label>
-    <input id="password" name="password" class="kit-input" placeholder="Введите пароль" required>
+    <wc-input id="password" name="password" placeholder="Введите пароль" required>
   </div>
 
   <div class="mt-8 w-full">
@@ -15,13 +15,19 @@
       <label for="rememberMe" class="kit-label">Запомнить меня</label>
     </div>
     <div class="flex flex-col gap-y-2 mt-4">
-      <button class="w-full kit-button" type="submit">Войти</button>
+      <wc-button class="w-full" type="submit">
+        <span class="text-center size-full">Войти</span>
+      </wc-button>
       {{#if errors}}
         {{#each errors}}
           <span style="color: red;">{{this}}</span>
         {{/each}}
       {{/if}}
-      <a href="/signup" class="h-32px inline-flex items-center justify-center secondary kit-button" type="submit">Зарегестрироваться</a>
+      <a href="/signup" class="h-32px w-full inline-flex items-center justify-center secondary kit-button" type="submit">
+        <wc-button class="w-full">
+          <span class="text-center w-full">Зарегестрироваться</span>
+        </wc-button>
+      </a>
     </div>
   </div>
 </form>
