--- a/packages/server/public/views/login.html
+++ b/packages/server/public/views/login.html
@@ -1,12 +1,12 @@
 <form class="px-2 space-y-4 w-320px" hx-swap="outerHTML" name="loginForm" hx-post="/signin">
   <div class="flex flex-col gap-y-2">
     <label for="email" class="kit-label">Логин</label>
-    <wc-input id="email" name="email" placeholder="Введите логин" required>
+    <input class="kit-input" id="email" name="email" placeholder="Введите логин" required>
   </div>
 
   <div class="flex flex-col gap-y-2">
     <label for="password" class="kit-label">Пароль</label>
-    <wc-input id="password" name="password" placeholder="Введите пароль" required>
+    <input class="kit-input" id="password" name="password" placeholder="Введите пароль" required>
   </div>
 
   <div class="mt-8 w-full">
@@ -15,18 +15,16 @@
       <label for="rememberMe" class="kit-label">Запомнить меня</label>
     </div>
     <div class="flex flex-col gap-y-2 mt-4">
-      <wc-button class="w-full" type="submit">
+      <button class="w-full kit-button" type="submit">
         <span class="text-center size-full">Войти</span>
-      </wc-button>
+      </button>
       {{#if errors}}
         {{#each errors}}
           <span style="color: red;">{{this}}</span>
         {{/each}}
       {{/if}}
-      <a href="/signup" class="h-32px w-full inline-flex items-center justify-center secondary kit-button" type="submit">
-        <wc-button class="w-full">
-          <span class="text-center w-full">Зарегестрироваться</span>
-        </wc-button>
+      <a href="/signup" class="kit-button h-32px inline-flex items-center justify-center secondary kit-button">
+        <span class="text-center w-full">Зарегестрироваться</span>
       </a>
     </div>
   </div>
