--- a/packages/server/public/views/register.html
+++ b/packages/server/public/views/register.html
@@ -29,7 +29,19 @@
       >Зарегестрироваться</button>
       {{#if errors}}
         {{#each errors}}
-        <span style="color: red;">{{this}}</span>
+          <span class="flex items-center gap-x-1">
+            <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g clip-path="url(#clip0_15341_47164)">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M4.8547 0.707823C5.35564 -0.187763 6.64436 -0.187917 7.14551 0.707546L11.8195 9.05902C12.3091 9.9339 11.6768 11.0125 10.6742 11.0125H1.32886C0.32642 11.0125 -0.305984 9.93417 0.183373 9.05929L4.8547 0.707823ZM7 7V3H5V7H7ZM5.99965 10C6.55175 10 6.99931 9.55229 6.99931 9C6.99931 8.44771 6.55175 8 5.99965 8C5.44756 8 5 8.44771 5 9C5 9.55229 5.44756 10 5.99965 10Z" fill="#D1242F"/>
+            </g>
+            <defs>
+            <clipPath id="clip0_15341_47164">
+            <rect width="12" height="12" fill="white"/>
+            </clipPath>
+            </defs>
+            </svg>
+            <span style="color: #D1242F; font-size: 12px;">{{this}}</span>
+          </span>
         {{/each}}
       {{/if}}
       <a href="/signin" class="h-32px inline-flex items-center justify-center secondary kit-button" type="submit">Войти</a>
