--- a/packages/server/public/views/layouts/main.html
+++ b/packages/server/public/views/layouts/main.html
@@ -27,6 +27,8 @@
   <script src="https://unpkg.com/htmx.org@2.0.3/dist/htmx.js" integrity="sha384-BBDmZzVt6vjz5YbQqZPtFZW82o8QotoM7RUp5xOxV3nSJ8u2pSdtzFAbGKzTlKtg" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/hyperscript.org@0.9.13"></script>
 
+
+
   </script>
   <script type="importmap">
     {
@@ -53,7 +55,9 @@
     <div class="flex items-center gap-x-2">
       <button
         class="kit-button secondary"
-        _="on click call #createPost's showModal() end"
+        data-hx-get="/templates/createPost"
+        data-hx-target="body"
+        data-hx-swap="beforeend"
         type="button"
       >
         <svg
@@ -65,24 +69,6 @@
           <path d="M21.731 2.269a2.625 2.625 0 0 0-3.712 0l-1.157 1.157 3.712 3.712 1.157-1.157a2.625 2.625 0 0 0 0-3.712ZM19.513 8.199l-3.712-3.712-12.15 12.15a5.25 5.25 0 0 0-1.32 2.214l-.8 2.685a.75.75 0 0 0 .933.933l2.685-.8a5.25 5.25 0 0 0 2.214-1.32L19.513 8.2Z" />
         </svg>
       </button>
-      <dialog id="createPost">
-        <form>
-          <section class="min-w-500px">
-            <div class="flex items-center justify-between">
-              <h2>Создать пост</h2>
-              <button
-                type="button"
-                _="on click call #createPost's close() end"
-                class="bg-transparent border-none cursor-pointer"
-              >
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-4">
-                  <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
-                </svg>
-              </button>
-            </div>
-          </section>
-        </form>
-      </dialog>
       <wc-selectmenu>
         <wc-selectmenu-trigger class="cursor-pointer">
           <span>
