--- a/packages/server/public/views/login.html
+++ b/packages/server/public/views/login.html
@@ -1,4 +1,4 @@
-<form class="px-2 space-y-4 w-320px" hx-swap="outerHTML" name="loginForm" hx-post="/signin">
+<form class="px-2 space-y-4 w-320px" data-hx-swap="outerHTML" name="loginForm" data-hx-post="/signin">
   <div class="flex flex-col gap-y-2">
     <label for="email" class="kit-label">Логин</label>
     <input class="kit-input" id="email" name="email" placeholder="Введите логин" required>
