--- a/packages/server/public/views/register.html
+++ b/packages/server/public/views/register.html
@@ -1,4 +1,4 @@
-<form class="px-2 space-y-4 w-320px" hx-swap="outerHTML" id="form" hx-post="/signup">
+<form class="px-2 space-y-4 w-320px" data-hx-swap="outerHTML" id="form" data-hx-post="/signup">
   <div class="flex flex-col gap-y-2">
     <label for="name" class="kit-label">Имя</label>
     <input
