--- a/packages/server/public/views/templates/createPost.html
+++ b/packages/server/public/views/templates/createPost.html
@@ -20,7 +20,7 @@
         <h2>Создать пост</h2>
         <button
           type="button"
-          _="on click call #createPost's close() end"
+          _="on click remove #createPost"
           class="bg-transparent border-none cursor-pointer"
         >
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-4">
