--- a/packages/server/public/views/layouts/main.hbs
+++ b/packages/server/public/views/layouts/main.hbs
@@ -9,16 +9,8 @@
   <link rel="stylesheet" href="../styles/button.css">
   <link rel="stylesheet" href="../styles/dialog.css">
   <link rel="stylesheet" href="../fonts/style.css">
-    <!-- <script>
-    window.__unocss = {
-      rules: [
-      ],
-      presets: [
-      ],
-    }
-    </script> -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@unocss/reset/normalize.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/@unocss/runtime"></script>
+  <link rel="stylesheet" href="../styles/style.css">
+
   <style>
   * {
     font-family: 'Sf Pro Regular';
