--- a/packages/server/public/views/templates/createPost.hbs
+++ b/packages/server/public/views/templates/createPost.hbs
@@ -29,6 +29,10 @@
         </button>
       </div>
 
+      <div class="space-y-2 flex flex-col mt-2 mb-6">
+        <label for="postName" class="kit-label">Название</label>
+        <input id="postName" class="kit-input" required name="name">
+      </div>
 
       <input id="editorContent" name="editor" type="hidden">
       <trix-toolbar id="editorToolbar"></trix-toolbar>
