--- a/packages/server/public/views/layouts/main.hbs
+++ b/packages/server/public/views/layouts/main.hbs
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="../styles/label.css">
   <link rel="stylesheet" href="../styles/button.css">
   <link rel="stylesheet" href="../styles/dialog.css">
+  <link rel="stylesheet" href="../styles/input.css">
   <link rel="stylesheet" href="../fonts/style.css">
   <link rel="stylesheet" href="../styles/style.css">
 
