--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,5 @@
 @import url('./fonts/style.css');
+/* @import url('virtual:uno.css'); */
 * {
   font-family: 'Sf Pro Regular';
   letter-spacing: 1px;
