--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,8 @@
 @import url('./fonts/style.css');
+
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 /* @import url('virtual:uno.css'); */
 * {
   font-family: 'Sf Pro Regular';
