--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -17,4 +17,13 @@ input {
     border: none;
 }
 
+
+p.is-editor-empty:first-child::before {
+  color: var(--gray-4);
+  content: attr(data-placeholder);
+  float: left;
+  height: 0;
+  pointer-events: none;
+}
+
 [x-cloak] { display: none !important; }
